tests/NormalTests/paczka1/small_fuzzy/84456699.err
Error in line 3: A75 A75 63,8
Error in line 4: A75 S541 69,1
Error in line 11: 0RarVp S541 89,9
